force-app/main/default/src/objects/MVN_MDM_Field_Mapping__mdt/MVN_MDM_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Field Mapping description for external integrations.</description>
    <label>MDM Field Mapping</label>
    <pluralLabel>MDM Field Mappings</pluralLabel>
</CustomObject>