force-app/main/default/src/objects/MVN_MDM_Field_Mapping__mdt/fields/MVN_Inbound__c.field-meta.xml
<CustomField>
    <fullName>MVN_Inbound__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if current field mapping is for Inbound connection</description>
    <label>Inbound?</label>
    <type>Checkbox</type>
</CustomField>