force-app/main/default/src/objects/MVN_MDM_Field_Mapping__mdt/fields/MVN_Is_Lookup_Field__c.field-meta.xml
<CustomField>
    <fullName>MVN_Is_Lookup_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Lookup Field?</label>
    <type>Checkbox</type>
</CustomField>