force-app/main/default/src/objects/MVN_MDM_Field_Mapping__mdt/fields/MVN_Lookup_Field_Filter__c.field-meta.xml
<CustomField>
    <fullName>MVN_Lookup_Field_Filter__c</fullName>
    <description>Field API name in the parent record used to select the correct one.</description>
    <label>Lookup Field Filter</label>
    <length>100</length>
    <type>Text</type>
</CustomField>