force-app/main/default/src/objects/MVN_MDM_Field_Mapping__mdt/fields/MVN_Lookup_sObject__c.field-meta.xml
<CustomField>
    <fullName>MVN_Lookup_sObject__c</fullName>
    <label>Lookup sObject</label>
    <length>100</length>
    <type>Text</type>
</CustomField>