force-app/main/default/src/objects/MVN_MDM_Field_Mapping__mdt/fields/MVN_MDM_Field__c.field-meta.xml
<CustomField>
    <fullName>MVN_MDM_Field__c</fullName>
    <description>MDM external system Field name</description>
    <label>MDM Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>