force-app/main/default/src/objects/MVN_MDM_Field_Mapping__mdt/fields/MVN_MDM_Object_Setting__c.field-meta.xml
<CustomField>
    <fullName>MVN_MDM_Object_Setting__c</fullName>
    <description>MDM Object Setting owner</description>
    <label>MDM Object Setting</label>
    <referenceTo>MVN_MDM_Object_Setting__mdt</referenceTo>
    <relationshipLabel>MDM Field Mappings</relationshipLabel>
    <relationshipName>MVN_MDM_Field_Mappings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>