force-app/main/default/src/objects/MVN_MDM_Field_Mapping__mdt/fields/MVN_Outbound__c.field-meta.xml
<CustomField>
    <fullName>MVN_Outbound__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if current field mapping is for Outbound connection</description>
    <label>Outbound?</label>
    <type>Checkbox</type>
</CustomField>