force-app/main/default/src/objects/MVN_MDM_Field_Mapping__mdt/fields/MVN_SFDC_Field__c.field-meta.xml
<CustomField>
    <fullName>MVN_SFDC_Field__c</fullName>
    <description>Salesforce Field API Name</description>
    <label>SFDC Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>