force-app/main/default/src/objects/MVN_MDM_Field_Mapping__mdt/validationRules/MVN_Need_Lookup_Field_Defined.validationRule-meta.xml
<ValidationRule>
    <fullName>MVN_Need_Lookup_Field_Defined</fullName>
    <active>true</active>
    <description>Needs to define the parent field to search for the correct one when retrieved.</description>
    <errorConditionFormula>AND(MVN_Is_Lookup_Field__c, OR(ISBLANK( MVN_Lookup_Field_Filter__c ), ISBLANK( MVN_Lookup_sObject__c )))</errorConditionFormula>
    <errorDisplayField>MVN_Is_Lookup_Field__c</errorDisplayField>
    <errorMessage>Needs to define the lookup field filter to active it.</errorMessage>
</ValidationRule>